# BeezleBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  beezle.conf
BeezleBot/: BeezleBot.cpp  CMakeLists.txt  commandhandler.cpp  commandhandler.h  settings.cpp  settings.h
